testing a fix for tutorial video playback on mobile devices pt.2

--- a/style.css
+++ b/style.css
@@ -364,6 +364,8 @@ html {
 .media-image {
     width: 40px;
     height: 40px;
+    object-fit: cover;
+    pointer-events: none;
 }
 
 @media (min-width: 640px) {
@@ -372,6 +374,8 @@ html {
     .media-image {
         width: 48px;
         height: 48px;
+        object-fit: cover;
+        pointer-events: none;
     }
 }
 
